objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Discount_c__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offer Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Image_Type__c</fullName>
        <inlineHelpText>The type ofimage image that will determine what to display</inlineHelpText>
        <label>Image Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>URL</fullName>
                </value>
                <value>
                    <fullName>Static Resource</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If selected, this image will be displayed on the Product List Page</inlineHelpText>
        <label>Image</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The related product</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RemainingQuantity__c</fullName>
        <label>RemainingQuantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resource_URL__c</fullName>
        <inlineHelpText>Contains the fully qualified path of the image to be shown on the product detail Page</inlineHelpText>
        <label>Resource URL</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Static_Resource__c</fullName>
        <inlineHelpText>Required if Static Resource is Selected in Image Type</inlineHelpText>
        <label>Static Resource</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalQuantity__c</fullName>
        <label>Inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <inlineHelpText>The URL for the image.</inlineHelpText>
        <label>URL</label>
        <type>Url</type>
    </fields>
</CustomObject>